fix: Button wave flicker problem (#151)

--- a/thaw/src/button/button.css
+++ b/thaw/src/button/button.css
@@ -95,6 +95,7 @@
 }
 
 .thaw-button .thaw-wave.thaw-wave--active {
+    opacity: 0;
     z-index: 1;
     animation-name: thawButtonWaveSpread, thawButtonWaveOpacity;
 }
